--- a/_posts/2015-01-01-first.md
+++ b/_posts/2015-01-01-first.md
@@ -8,4 +8,7 @@ style: center
 ### *Cosmo Harrigan*
 {: .text-purple}
 
-Cosmo Harrigan is an entrepreneur, software architect and research scientist in artificial intelligence and machine learning from Seattle. He is currently a contributor to the research and development of artificial general intelligence with the OpenCog Foundation. He is also a graduate of the Singularity University Graduate Studies Program at NASA Ames.
+Cosmo Harrigan is an entrepreneur, software architect and research scientist in artificial intelligence and machine learning from Seattle. 
+He is currently a contributor to the research and development of artificial general intelligence with the OpenCog Foundation and is researching
+reinforcement learning, deep learning, unsupervised representation learning and probabilistic reasoning.
+He is a graduate of the Singularity University Graduate Studies Program at NASA Ames.
